# maske-ofx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
installer/: README.md
installer/macos/: build_pkg.sh
installer/windows/: Maske.iss  install.bat  uninstall.bat
src/: GpuBackend.h  HistoryBrush.cpp  HistoryBrushCuda.cu  HistoryBrushMetal.mm
test/: CudaSmokeTest.cpp
